# AI-Engineering

./: .gitignore  Makefile  docker-compose.yml  env.example  main.py  pyproject.toml
apps/api/: pyproject.toml
apps/api/evals/: eval_retriever.py  eval_retriever_extended.py
apps/api/src/api/: app.py
apps/api/src/api/agents/: agents.py  graph.py  retrieval_generation.py
apps/api/src/api/agents/prompts/: intent_router_agent.yaml  qna_agent.yaml
apps/api/src/api/agents/utils/: prompt_management.py
apps/api/src/api/api/: endpoints.py  model.py
apps/chatbot_ui/: pyproject.toml
apps/chatbot_ui/src/chatbot_ui/: app.py
notebooks/prerequisites/: 01-llm-apis.ipynb
notebooks/week_1/: 01-explore-amazon-dataset.ipynb  02-RAG-preprocessing-items.ipynb  03-RAG-pipeline.ipynb  04-Observability-foundations.ipynb  05-RAG-Eval-Dataset.ipynb  06-RAG-Evals.ipynb
notebooks/week_2/: 01-structured-outputs-intro.ipynb  02-Structured-Output-RAG-Pipeline.ipynb  03-Hybrid-search.ipynb  04-Reranking.ipynb  05-Prompt-Management.ipynb  06-Eval-Dataset-Large.ipynb
notebooks/week_2/prompts/: retrieval_generation.yaml
notebooks/week_3/: 01-01-LangGraph-Intro.ipynb  01-02-Langraph-Intro.ipynb  01-03-AgentGraph-with-loopback.ipynb  02-01-Query-Rewritting.ipynb  02-02-Query-Rewriting-parallel-execution.ipynb  03-Router.ipynb  04-Agent-Single-Turn.ipynb
