[project]
name = "ai-engineering-bootcamp-prerequisites"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.9.0",
    "groq>=1.5.0",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "openai>=2.43.0",
    "panda>=0.3.1",
    "pandas>=3.0.3",
]

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/chatbot_ui",
]
