[project]
name = "ai-engineering-bootcamp-prerequisites"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.9.0",
    "groq>=1.5.0",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "openai>=2.43.0",
    "panda>=0.3.1",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
]

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/chatbot_ui",
]

[dependency-groups]
dev = [
    "cohere>=7.0.5",
    "instructor>=1.15.4",
    "langchain-community>=0.4.0,<0.4.2",
    "langchain-google-vertexai>=3.2.4",
    "langchain-openai>=1.1.9",
    "langgraph>=1.2.2",
    "langsmith>=0.8.16",
    "qdrant-client>=1.18.0",
    "ragas>=0.4.3",
]
